[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/Database_Manager/Theme and Style/main_15.tres" type="Theme" id=1]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Input_Scenes/popup_TableSelect.gd" type="Script" id=2]
[ext_resource path="res://addons/Database_Manager/Scenes and Scripts/UI_Input_Scenes/NewField_Input.tscn" type="PackedScene" id=3]

[node name="popup_TableSelect" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0.027451, 0.027451, 0.027451, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -353.5
margin_top = -153.5
margin_right = 353.5
margin_bottom = 153.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox1" type="VBoxContainer" parent="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox1" parent="PanelContainer/VBox1" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 707.0
margin_bottom = 151.0
size_flags_vertical = 3

[node name="VBox1" parent="PanelContainer/VBox1/HBox1" index="0"]
visible = false
margin_right = 340.0
margin_bottom = 132.0

[node name="Label3" parent="PanelContainer/VBox1/HBox1/VBox1" index="0"]
margin_right = 340.0
margin_bottom = 64.0

[node name="LineEdit3" parent="PanelContainer/VBox1/HBox1/VBox1" index="1"]
margin_top = 68.0
margin_right = 340.0
margin_bottom = 132.0
caret_blink = true
caret_blink_speed = 0.5

[node name="VBox2" parent="PanelContainer/VBox1/HBox1" index="1"]
visible = false
margin_left = 0.0
margin_right = 340.0
margin_bottom = 132.0

[node name="ItemType_Selection" parent="PanelContainer/VBox1/HBox1/VBox2" index="0"]
visible = false
margin_right = 684.0
margin_bottom = 132.0

[node name="Label" parent="PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection" index="0"]
margin_right = 684.0
margin_bottom = 30.0

[node name="Input" parent="PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection" index="1"]
margin_top = 34.0
margin_right = 684.0
margin_bottom = 132.0
items = [ "Item 0", null, false, 0, null ]

[node name="input_templateBuffer" parent="PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection" index="2"]
margin_top = 108.0
margin_right = 236.0
margin_bottom = 132.0

[node name="Table_Selection" parent="PanelContainer/VBox1/HBox1" index="2"]
visible = true
margin_left = 0.0
margin_right = 707.0
margin_bottom = 151.0

[node name="Label" parent="PanelContainer/VBox1/HBox1/Table_Selection" index="0"]
margin_right = 707.0
margin_bottom = 30.0

[node name="Input" parent="PanelContainer/VBox1/HBox1/Table_Selection" index="1"]
margin_top = 34.0
margin_right = 707.0
margin_bottom = 151.0
items = [ "Item 0", null, false, 0, null ]

[node name="VBox3" parent="PanelContainer/VBox1/HBox1" index="3"]
margin_left = 480.0
margin_right = 580.0
margin_bottom = 132.0

[node name="Label3" parent="PanelContainer/VBox1/HBox1/VBox3" index="0"]
margin_bottom = 64.0

[node name="LineEdit3" parent="PanelContainer/VBox1/HBox1/VBox3" index="1"]
margin_top = 68.0
margin_bottom = 132.0

[node name="VBox4" parent="PanelContainer/VBox1/HBox1" index="4"]
margin_left = 584.0
margin_right = 684.0
margin_bottom = 132.0

[node name="Label3" parent="PanelContainer/VBox1/HBox1/VBox4" index="0"]
margin_bottom = 64.0

[node name="LineEdit3" parent="PanelContainer/VBox1/HBox1/VBox4" index="1"]
margin_top = 68.0
margin_bottom = 132.0

[node name="HBox2" type="HBoxContainer" parent="PanelContainer/VBox1"]
margin_top = 155.0
margin_right = 707.0
margin_bottom = 307.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Accept" type="Button" parent="PanelContainer/VBox1/HBox2"]
margin_right = 351.0
margin_bottom = 152.0
size_flags_horizontal = 3
text = "Accept"

[node name="Cancel" type="Button" parent="PanelContainer/VBox1/HBox2"]
margin_left = 355.0
margin_right = 707.0
margin_bottom = 152.0
size_flags_horizontal = 3
text = "Cancel"

[connection signal="visibility_changed" from="." to="." method="_on_popup_newValue_visibility_changed"]
[connection signal="item_selected" from="PanelContainer/VBox1/HBox1/Table_Selection/Input" to="." method="_on_Input_item_selected"]
[connection signal="button_up" from="PanelContainer/VBox1/HBox2/Accept" to="." method="_on_Accept_button_up"]
[connection signal="button_up" from="PanelContainer/VBox1/HBox2/Cancel" to="." method="_on_Cancel_button_up"]

[editable path="PanelContainer/VBox1/HBox1"]
[editable path="PanelContainer/VBox1/HBox1/VBox2/ItemType_Selection"]
[editable path="PanelContainer/VBox1/HBox1/Table_Selection"]
